[project]
name = "comfyui-flux-continuum"
description = "NODES:Step Slider, Denoise Slider, Guidance Slider, Batch Slider, Max Shift Slider, ControlNet Slider"
version = "1.0.0"
license = {file = "LICENSE"}

[project.urls]
Repository = "https://github.com/robertvoy/ComfyUI-Flux-Continuum"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "ComfyUI-Flux-Continuum"
Icon = ""
